# MapaInversiones

./: .editorconfig  .editorconfig.bak  .gitignore  CODE_OF_CONDUCT.md  License.md  MapaInversiones.sln  PlataformaTransparencia.sln  README.md  THIRD-PARTY-LICENSES.md  sonar-project.properties
MapaInversiones.ChatBot/: .env.dummy  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  docker-compose-with-arize.yml  docker-compose.yml  pyproject.toml  requirements.txt
MapaInversiones.ChatBot/app/: .gitignore  alembic.ini  main.py  sqlfluff
MapaInversiones.ChatBot/app/constants/: nodes.py  whatsapp.py
MapaInversiones.ChatBot/app/data/: Términos SNIP y sinonimos (3 columnas) - Hoja 2.csv  concepts_definitions_v1.0.md  concepts_definitions_v1.0_old.md  data_cutoff.json
MapaInversiones.ChatBot/app/data_ingestion/: README.md  dimensions.json  manage.py  text_normalize.py  vector_store.py
MapaInversiones.ChatBot/app/database/: apply_cascade_indexes.py  apply_functional_indexes.py  apply_trgm.py  async_postgres.py  chatbot_engine.py  database.py  dependencies.py  postgres.py  schema_cache.json  schema_enriched.json  schema_summary.md  session_store.py  sqlserver.py
MapaInversiones.ChatBot/app/middleware/: db_session.py  moderation.py  security.py  timeout.py
MapaInversiones.ChatBot/docs/: CASCADE_SEARCH.md  CONVERSATIONAL_COHERENCE_IMPLEMENTATION.md  OPTIMIZACIONES_2024_12_03.md  codebase_review_summary.md  doc_deploy_steps.txt  doc_docker.md  doc_graph_2025_11_25.md  graph_architecture_guide.md  presentation_guide.md
MapaInversiones.Modelos/: .gitignore  (+59 more)
(+3209 files in other folders)
